k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keybasebot
  namespace: suat
spec:
  selector:
    matchLabels:
      run: keybasebot
  replicas: 1
  template:
    metadata:
      labels:
        run: keybasebot
    spec:
      containers:
      - name: keybasebot
        image: docker.k8s.sui.li/keybasebot:2

---
apiVersion: v1
kind: Service
metadata:
  name: keybasebot
  namespace: suat
  labels:
    run: keybasebot
spec:
  selector:
    run: keybasebot
  ports:
  - name: http
    port: 8080
    protocol: TCP
