k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keybasebot-ingress 
  namespace: suat
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/load-balance: "roundrobin"
spec:
  tls:
  - hosts:
    - keybase.k8s.sui.li
    secretName: tls-sui-li
  rules:
  - host: keybase.k8s.sui.li
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keybasebot
            port:
              number: 8080
